--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,7 @@
 {
   "version": 1,
   "cli": {
+    "analytics": "740073ab-f7a5-4554-b1bd-38db1467e358",
     "defaultCollection": "@nrwl/angular"
   },
   "defaultProject": "ng",
@@ -29,6 +30,11 @@
     },
     "@nrwl/angular:component": {
       "style": "scss"
+    },
+    "@nrwl/react": {
+      "application": {
+        "babel": true
+      }
     }
   },
   "projects": {
@@ -140,6 +146,107 @@
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/ng-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
+    "angular-lib": {
+      "projectType": "library",
+      "root": "libs/angular-lib",
+      "sourceRoot": "libs/angular-lib/src",
+      "prefix": "resume",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:package",
+          "options": {
+            "project": "libs/angular-lib/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/angular-lib/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "libs/angular-lib/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/angular-lib"],
+          "options": {
+            "jestConfig": "libs/angular-lib/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/angular-lib/src/**/*.ts",
+              "libs/angular-lib/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "assets": {
+      "root": "libs/assets",
+      "sourceRoot": "libs/assets/src",
+      "projectType": "library",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/assets/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/assets"],
+          "options": {
+            "jestConfig": "libs/assets/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "react-lib": {
+      "root": "libs/react-lib",
+      "sourceRoot": "libs/react-lib/src",
+      "projectType": "library",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/web:package",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/libs/react-lib",
+            "tsConfig": "libs/react-lib/tsconfig.lib.json",
+            "project": "libs/react-lib/package.json",
+            "entryFile": "libs/react-lib/src/index.ts",
+            "external": ["react", "react-dom"],
+            "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
+            "assets": [
+              {
+                "glob": "libs/react-lib/README.md",
+                "input": ".",
+                "output": "."
+              }
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/react-lib/**/*.{ts,tsx,js,jsx}"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/react-lib"],
+          "options": {
+            "jestConfig": "libs/react-lib/jest.config.js",
+            "passWithNoTests": true
           }
         }
       }
