--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "ng-components": ["libs/angular-lib/src/index.ts"],
       "@resume/assets": ["libs/assets/src/index.ts"],
-      "react-components": ["libs/react-lib/src/index.ts"]
+      "react-components": ["libs/react-lib/src/index.ts"],
+      "@resume/footer-lib": ["libs/footer-lib/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
