--- a/.github/workflows/master_advin.yml
+++ b/.github/workflows/master_advin.yml
@@ -50,6 +50,5 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'ADVIN'
-          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8B65F1262E6740B589DBBEEB0C7898EC }}
-          package: .
+          package: ./dist
