--- a/package.json
+++ b/package.json
@@ -37,6 +37,17 @@
     "@angular/platform-browser": "12.0.0",
     "@angular/platform-browser-dynamic": "12.0.0",
     "@angular/router": "12.0.0",
+    "@nrwl/cli": "12.3.4",
+    "@nrwl/cypress": "12.3.4",
+    "@nrwl/eslint-plugin-nx": "12.3.4",
+    "@nrwl/jest": "12.3.4",
+    "@nrwl/linter": "12.3.4",
+    "@nrwl/node": "12.3.4",
+    "@nrwl/nx-cloud": "13.0.0",
+    "@nrwl/react": "12.3.4",
+    "@nrwl/tao": "12.3.4",
+    "@nrwl/web": "^12.3.4",
+    "@nrwl/workspace": "12.3.4",
     "@nrwl/angular": "12.3.4",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
