--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@nrwl/jest": "12.3.4",
     "@nrwl/linter": "12.3.4",
     "@nrwl/node": "12.3.4",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^12.2.7",
     "@nrwl/react": "12.3.4",
     "@nrwl/tao": "12.3.4",
     "@nrwl/web": "^12.3.4",
