--- a/.github/workflows/master_advin.yml
+++ b/.github/workflows/master_advin.yml
@@ -25,7 +25,6 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -51,6 +50,5 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'advin'
-          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_91511859F50342FCB1B651CAD5BED3B3 }}
-          package: .
+          package: ./dist/apps/ng
